crates/reddb-wire/tests/snapshots/parser_snapshots__scheme_with_plus.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"red+tls://host\")"
---
input: "red+tls://host"
kind:  UnsupportedScheme
error: UNSUPPORTED_SCHEME: unsupported scheme: red+tls
