crates/reddb-wire/tests/snapshots/parser_snapshots__unknown_scheme_mongodb.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"mongodb://localhost\")"
---
input: "mongodb://localhost"
kind:  UnsupportedScheme
error: UNSUPPORTED_SCHEME: unsupported scheme: mongodb
