crates/reddb-wire/tests/snapshots/parser_snapshots__unknown_scheme_uppercase.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"MONGODB://localhost\")"
---
input: "MONGODB://localhost"
kind:  UnsupportedScheme
error: UNSUPPORTED_SCHEME: unsupported scheme: mongodb
